# CMOR-438-Repo

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: README.md
examples/Supervised_Learning/: README.md
examples/Supervised_Learning/Decision_Trees/: Decision_Trees.ipynb  README.md
examples/Supervised_Learning/Ensemble_Methods/: Ensemble_Methods.ipynb  README.md
examples/Supervised_Learning/K_Nearest_Neighbors/: KNN.ipynb  README.md
examples/Supervised_Learning/Linear_Regression/: Linear_Regression.ipynb  README.md
examples/Supervised_Learning/Logistic_Regression/: Logistic_Regression.ipynb  README.md
examples/Supervised_Learning/Multilayer_Perceptron/: Multilayer_Perception.ipynb  README.md
examples/Supervised_Learning/Perceptron/: Perceptron.ipynb  README.md
examples/Supervised_Learning/Random_Forest/: Random_Forest.ipynb
examples/Unsupervised_Learning/: README.md
examples/Unsupervised_Learning/Community_Detection/: README.md
examples/Unsupervised_Learning/DBSCAN/: DBSCAN.ipynb  README.md
examples/Unsupervised_Learning/K_Means_Clustering/: K_Means_Clustering.ipynb  README.md
examples/Unsupervised_Learning/PCA/: README.md
src/: __init__.py
src/rice_ml/: README.md  __init__.py  preprocessing.py
src/rice_ml/supervised_learning/: __init__.py  decision_trees.py  (+6 more)
tests/: README.md  test_community_detection.py  test_dbscan.py  test_decision_trees.py  test_ensemble_methods.py  test_kmc.py  test_knn.py  test_linear_regression.py  test_logistic_regression.py  test_mlp.py  test_pca.py  test_perceptron.py
(+5 files in other folders)
