[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rice_ml"
version = "0.1.0"
description = "CMOR 438 ML Algorithms"
authors = [{ name = "Hawk Veluz", email ="hv16@rice.edu"}]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

dependencies = ["numpy", "pandas", "matplotlib", "scikit-learn"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]